--- a/Index.html
+++ b/Index.html
@@ -1,9 +1,5 @@
-<!-- Code from d3-graph-gallery.com -->
-<!DOCTYPE html>
-<meta charset="utf-8">
-
-<!-- Load d3.js -->
-<script src="https://d3js.org/d3.v4.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.13.0/d3.min.js"></script>
+<body>
 
 <!-- Add 2 buttons -->
 <button onclick="update('var1')">Male</button>
@@ -12,81 +8,134 @@
 <!-- Create a div where the graph will take place -->
 <div id="my_dataviz"></div>
 
-
 <script>
+var margin = {top: 40, right: 50, bottom: 60, left: 50};
 
-// set the dimensions and margins of the graph
-var margin = {top: 30, right: 30, bottom: 70, left: 60},
-    width = 760 - margin.left - margin.right,
-    height = 400 - margin.top - margin.bottom;
+var width = 600 - margin.left - margin.right,
+height = 600 - margin.top - margin.bottom;
 
-// append the svg object to the body of the page
-var svg = d3.select("#my_dataviz")
-  .append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform",
-          "translate(" + margin.left + "," + margin.top + ")");
+var svg = d3.select("body").append("svg")
+.attr("width", width + margin.left + margin.right)
+.attr("height", height + margin.top + margin.bottom)
+.append("g")
+      .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-// Initialize the X axis
-var x = d3.scaleBand()
-  .range([ 0, width ])
-  .padding(0.2);
-var xAxis = svg.append("g")
-  .attr("transform", "translate(0," + height + ")")
+// Config
+var cfg = {
+  labelMargin: 5,
+  xAxisMargin: 10,
+  legendRightMargin: 0
+}
 
+var x = d3.scaleLinear()
+    .range([0, width]);
 
-// Initialize the Y axis
-var y = d3.scaleLinear()
-  .range([ height, 0]);
-var yAxis = svg.append("g")
-  .attr("class", "myYaxis")
+var colour = d3.scaleSequential().domain([1,10])
+.interpolator(d3.interpolatePuRd);
 
-  // text label for the y axis
-  svg.append("text")
-      .attr("transform", "rotate(-90)")
-      .attr("y", 0 - margin.left)
-      .attr("x",0 - (height / 2))
-      .attr("dy", "1em")
-      .style("text-anchor", "middle")
-      .text("Incidence per 100,000");      
+var y = d3.scaleBand()
+    .range([height, 20])
+    .padding(0.15);
+
+function parse(d) {
+  d.rank = +d.rank;
+  d.var1 = +d.var1;
+  d.var2 = +d.var2;
+  return d;
+}
+
+var legend = svg.append("g")
+    .attr("class", "legend");
+
+legend.append("text")
+    .attr("x", width - cfg.legendRightMargin)
+    .attr("text-anchor", "end")
+    .text("Ethnicity");
+
+legend.append("text")
+// A function that create / update the plot for a given variable:
+  .attr("x", width - cfg.legendRightMargin)
+    .attr("y", 18)
+    .attr("text-anchor", "end")
+    .style("opacity", 0.5)
+    .text("Incidence(Per 100,000)");
 
 // A function that create / update the plot for a given variable:
+var yAxis = svg.append("g")
+    .attr("class", "y-axis")
+  
+  var xAxis = svg.append("g")
+    .attr("class", "x-axis");
+    
+var labels = svg.append("g")
+  .attr("class", "labels");
 function update(selectedVar) {
 
-  // Parse the Data
-  d3.csv("https://raw.githubusercontent.com/apexmedicine/D3/master/demographics6.csv", function(data) {
+d3.csv("https://raw.githubusercontent.com/apexmedicine/D3/master/demographics7.csv", parse, 
+function(error, data) {
+  if (error) throw error;
+  
+  y.domain(data.map(function(d) { return d.Group; }));
+  x.domain(d3.extent(data, function(d) { return d[selectedVar]; }));
+  
+  if(x.domain()[1] < 0) x.domain([x.domain()[0], 0])
+  
+  var max = d3.max(data, function(d) { return d[selectedVar]; });
+  colour.domain([-max, max]);
+  
+  yAxis.attr("transform", "translate(" + x(0) + ",80)")
+    .append("line")
+    .attr("y1", 0)
+    .attr("y2", height);
+  
+  xAxis.attr("transform", "translate(0," + (height + cfg.xAxisMargin) + ")")
+    .call(d3.axisBottom(x).tickSizeOuter(0));
+  
+// variable u: map data to existing bars
+var u = svg.selectAll("rect")
+  .data(data)
+// update bars
+ u
+  .enter()
+  .append("rect")
+   .merge(u)
+  .transition()
+  .duration(1000)
+    .attr("x", function(d) { 
+        return x(Math.min(d[selectedVar], 0)); })
+    .attr("y", function(d) { 
+    return y(d.Group); })
+    .attr("width", d=>{
+        return Math.abs(x(d[selectedVar]) - x(0))})
+    .attr("height", y.bandwidth())
+    .attr("fill", "#69b3a2")
 
-    // X axis
-    x.domain(data.map(function(d) { return d.Group; }))
-    xAxis.transition().duration(1000).call(d3.axisBottom(x))
-
-    // Add Y axis
-    y.domain([0, d3.max(data, function(d) { return +d[selectedVar] }) ]);
-    yAxis.transition().duration(1000).call(d3.axisLeft(y));
-
-    // variable u: map data to existing bars
-    var u = svg.selectAll("rect")
-      .data(data)
-
-    // update bars
-    u
-      .enter()
-      .append("rect")
-      .merge(u)
-      .transition()
-      .duration(1000)
-        .attr("x", function(d) { return x(d.Group); })
-        .attr("y", function(d) { return y(d[selectedVar]); })
-        .attr("width", x.bandwidth())
-        .attr("height", function(d) { return height - y(d[selectedVar]); })
-        .attr("fill", "#69b3a2")
-  })
-
-}
+ 
+  
+  let text_u = labels.selectAll("text")
+    .data(data)
+    text_u.enter()
+    .append("text")
+    .merge(text_u)
+    .attr("class", "bar-label")
+    .attr("x", x(0))
+    .attr("y", function(d) { return y(d.Group )})
+    .attr("dy", y.bandwidth() / 2)
+    .attr("text-anchor", function(d) {
+        return d[selectedVar] < 0 ? "start" : "end";
+    })
+    .text(function(d) { return d.Group })
+    .style("fill", function(d) {
+         if (d.Ethhnicity == "Black") {
+         return "blue";
+       }
+    });
+    
+});
+}  
 
 // Initialize plot
 update('var1')
 
 </script>
+</body>
