--- a/InteractiveDivergent.html
+++ b/InteractiveDivergent.html
@@ -2,12 +2,9 @@
 <body>
     <style>
     body {
-        font-family: Arial;
+        font-family: Helvetica;
       }
       
-      .y-axis line{
-        stroke: black;
-      }
       </style>
 <!-- Add 2 buttons -->
 <button onclick="update('var1')">Male</button>
